--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 # For pyproject.toml
 isolated_build = True
-envlist = clean, linting, py36, py37, docs, report
+envlist = clean, linting, py36, py37, py38, docs, report
 
 [testenv]
 extras = tests
